crates/penrose_proc/tests/stub/visibility-is-correct-failure.stderr
error[E0603]: trait `StubFoo` is private
  --> $DIR/visibility-is-correct-failure.rs:14:13
   |
14 | impl inner::StubFoo for MyStruct {}
   |             ^^^^^^^ private trait
   |
note: the trait `StubFoo` is defined here
  --> $DIR/visibility-is-correct-failure.rs:5:5
   |
5  |     #[stubbed_companion_trait]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
